@@ -1,6 +1,7 @@
 2024-09-22 Konstantin Kushnir <chpock@gmail.com>
 	* Bumped version to 2.1.0
 	* Fix tkcon compatibility with Tcl9
+	* Add more release automations
 
 2024-09-22 Konstantin Kushnir <chpock@gmail.com>
 	* RELEASE TAG 2.0.0
